fix: attempt to fix cell stretching

--- a/src/style.css
+++ b/src/style.css
@@ -124,6 +124,8 @@ main {
 .computer-board > div {
   border: solid 1px black;
   border-radius: 5px;
+  max-width: 45px;
+  max-height: 45px;
 }
 
 .computer-board > div:hover {
